tolk-tester/tests/invalid-declaration/err-1906.tolk

fun onBouncedMessage(in: InMessageBounced) {
    return in.valueExtra;
}

/**
@compilation_should_fail
@stderr `onBouncedMessage` should return `void`
 */
